[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["no-std"]
description = "serde-json for no_std programs"
documentation = "https://docs.rs/serde-json-core"
edition = "2018"
keywords = ["serde", "json"]
license = "MIT OR Apache-2.0"
name = "serde-json-core"
readme = "README.md"
repository = "https://github.com/rust-embedded-community/serde-json-core"
version = "0.2.0"

[dependencies]
heapless = "0.6.1"
ryu = "1.0.5"

[dependencies.serde]
default-features = false
version = "1.0.80"

[dev-dependencies]
serde_derive = "1.0.80"

[features]
custom-error-messages = []
std = ["serde/std"]
