[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["no-std"]
description = "serde-json for no_std programs"
documentation = "https://docs.rs/serde-json-core"
edition = "2018"
keywords = ["serde", "json"]
license = "MIT OR Apache-2.0"
name = "serde-json-core"
readme = "README.md"
repository = "https://github.com/rust-embedded-community/serde-json-core"
version = "0.5.0"

[dependencies]
ryu = "1.0.5"

[dependencies.heapless]
version = "0.7"
optional = true

[dependencies.serde]
default-features = false
version = "1.0.126"

[dev-dependencies]
serde_derive = "1.0.126"

[features]
default = ["heapless"]
custom-error-messages = ["heapless"]
std = ["serde/std"]
